AX: AccessibilityObject::visibleCharacterRange is extremely slow when called on objects with lots of text https://bugs.webkit.org/show_bug.cgi?id=237678

Reviewed by Andres Gonzalez.

Source/WebCore:

AccessibilityObject::visibleCharacterRange is extremely slow when
called on objects with lots of text. For example, trying to enter a
large contenteditable element with VoiceOver causes "Safari not
responding" because WebKit is so slow to return this data.

This patch fixes this in two ways. First, we optimize computation of
the end boundary point by grabbing previous line start positions in
batches and binary searching within each batch to find the correct
value.

I tried to apply this algorithm to the computation of the start
boundary, but that regressed performance for small and medium text
objects, and didn't yield any noticeable improvement for large text
objects. Keeping start boundary computation as-is while changing the
end boundary computation provided the best performance at all text
sizes.

Second, this patch caches visibleCharacterRange results, as the same
inputs to this function will always yield the same output. It's common
for this data to be requested multiple times without any change in
page state (e.g. scrolling), so caching further improves performance
by a lot.

Additional testcases added to accessibility/visible-character-range.html to
ensure behavior is correct.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::previousLineStartBoundaryPoints const): Added.
(WebCore::AccessibilityObject::lastBoundaryPointContainedInRect const): Added.
(WebCore::AccessibilityObject::boundaryPointsContainedInRect const): Added.
(WebCore::AccessibilityObject::visibleCharacterRange const):
Wraps visibleCharacterRangeInternal to handle caching.
(WebCore::AccessibilityObject::visibleCharacterRangeInternal const):
(WebCore::AccessibilityObject::previousLineStartPositionInternal const): Added.
(WebCore::AccessibilityObject::previousLineStartPosition const):
Wraps previousLineStartPositionInternal to return default
VisualPosition if it returns std::nullopt (existing callers expect this behavior)
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::lastBoundaryPointContainedInRect const): Added.

* dom/BoundaryPoint.cpp:
(WebCore::operator<<):
* dom/BoundaryPoint.h:
Added implementation of operator<< to make debugging boundary points easier.

LayoutTests:

Add many new visible character range testcases split across four new tests.

* accessibility/visible-character-range-basic.html: Added.
* accessibility/visible-character-range-height-changes.html: Added.
* accessibility/visible-character-range-scrolling.html: Added.
* accessibility/visible-character-range-width-changes.html: Added.
* platform/glib/TestExpectations: Skip new tests.
* platform/ios-simulator-wk2/TestExpectations:
Mark new tests as crashing since the old test was crashing in `main`.
* platform/ios/TestExpectations: Enable new tests.
* platform/ios/accessibility/visible-character-range-basic-expected.txt: Added.
* platform/ios/accessibility/visible-character-range-expected.txt: Removed.
* platform/ios/accessibility/visible-character-range-height-changes-expected.txt: Added.
* platform/ios/accessibility/visible-character-range-scrolling-expected.txt: Added.
* platform/ios/accessibility/visible-character-range-width-changes-expected.txt: Added.
* platform/mac-wk1/TestExpectations: Skip new tests.
* platform/mac/accessibility/visible-character-range-basic-expected.txt: Added.
* platform/mac/accessibility/visible-character-range-expected.txt: Removed.
* platform/mac/accessibility/visible-character-range-height-changes-expected.txt: Added.
* platform/mac/accessibility/visible-character-range-scrolling-expected.txt: Added.
* platform/mac/accessibility/visible-character-range-width-changes-expected.txt: Added.
* platform/win/TestExpectations: Skip new tests.
* resources/accessibility-helper.js:
(visibleRange): Added.



Canonical link: https://commits.webkit.org/248693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291600 268f45cc-cd09-0410-ab3c-d52691b4dbfc