Source/WebCore/dom/BoundaryPoint.h
@@ -41,6 +41,8 @@ struct BoundaryPoint {
 bool operator==(const BoundaryPoint&, const BoundaryPoint&);
 bool operator!=(const BoundaryPoint&, const BoundaryPoint&);
 
+WTF::TextStream& operator<<(WTF::TextStream&, const BoundaryPoint&);
+
 template<TreeType = Tree> PartialOrdering treeOrder(const BoundaryPoint&, const BoundaryPoint&);
 
 WEBCORE_EXPORT std::optional<BoundaryPoint> makeBoundaryPointBeforeNode(Node&);
